results/experiments/11_90_incorrect/1437/2026-04-29_07-07-32/selection/batfish/candidate_1_vs_candidate_2_reachability.txt
--- Analyzing results/experiments/2026-04-29_06-59-06/1437/2026-04-29_07-07-32/candidates: candidate_1 vs candidate_2 ---

[DIFFERENCE DETECTED]
Counter-example Packet (Packet P): start=amsterdam [10.0.0.33->100.0.17.0 ICMP (type=8, code=0)]

Trace in Candidate 1 (Permitted):
[((ORIGINATED(default), FORWARDED(Forwarded out interface: FastEthernet1/1 with resolved next-hop IP: 10.0.0.94, Routes: [ospfE2 (Network: 100.0.17.0/24, Next Hop: interface FastEthernet1/1 ip 10.0.0.94)]), TRANSMITTED(FastEthernet1/1)), (RECEIVED(FastEthernet0/1), FORWARDED(Forwarded out interface: FastEthernet1/1 with resolved next-hop IP: 10.0.0.66, Routes: [ospfE2 (Network: 100.0.17.0/24, Next Hop: interface FastEthernet1/1 ip 10.0.0.66)]), TRANSMITTED(FastEthernet1/1)), (RECEIVED(FastEthern [...]

Trace in Candidate 2 (Denied/Different):
[((ORIGINATED(default), NO_ROUTE(Discarded)))]
